# Another-World-Bytecode-Interpreter

./: .editorconfig  .gitignore  CMakeLists.txt  N64-Notes.md  README.md  buildN64.bash  buildSDL2.bash
cmake/: N64LibDragon.cmake
src/: endian.h  engine.cpp  main.cpp  mixer.h  mixerN64.cpp  mixerSDL.cpp  sfxplayer.cpp  sfxplayer.h  sys.h  sysN64.cpp  sysSDL.cpp  util.cpp
